--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ on:
         - 'XY-C1'
         - 'ZTE-E8820S'
         - 'WE410443-TC'
-        default: 'K2P'
+        default: 'NEWIFI3'
       release:
         type: boolean
         description: 'upload to release'
